Add(item): port ItemCmds to slash
Also a bunch of fixes for slash stuff. Some of it would've been
quite bad to push to prod, even in MP lol